# interview

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: db.py  dependencies.py  es.py  main.py  schema.py  settings.py  worker.py
app/routes/: delete.py  search.py
app/services/: backfill.py  delete.py  search.py
data/: source.csv
scripts/: backfill.py  ingest.py
scripts/sql/: 000_cleanup.sql  001_staging.sql  002_vk.sql  003_rubrics.sql  004_outbox.sql
